// legacy proto
syntax = "proto3";

package lbtproto;

option cc_generic_services = true;
option py_generic_services = true;

message EncryptToken {
	int64 token = 1;   // 用于加密过程的token，不同的connection生成不同的token,避免重放攻击
}

message EncryptKey {
	bytes headPadding = 1; //随机长度的padding，用于防止黑客在网络流中通过长度轻易追查到key的位置
	bytes key = 2;     // 加密的会话密钥串
	int64 token = 3;   // 用于加密过程的token，不同的connection生成不同的token,避免重放攻击
	bytes tailPadding = 4; //随机长度的padding，可以让每个链接的网络流的rpc起始位置不同
}

message EncryptKeyString {
	bytes keyString = 1;  //EncryptKey message加密后的字节流
}

message ConnectServerReq {
	enum ReqType {
		NewConnection = 0;
		ReConnection = 1;
		BindSoul = 2;
		BindAvatar = 3;
		BindAccount = 4;
	}
	ReqType type = 1;
	bytes deviceId = 2;
	bytes clientInfo = 3;
	bytes auth = 4;
	bytes entityInfo = 5;
}

message ConnectServerResp {
	enum RespType {
		Busy = 0;
		Connected = 1;
		ConnectRefused = 2;
		Reconnected = 3;
		ReconnectRefused = 4;
		Forbidden = 5;
		MaxConnections = 6;
	}
	RespType type = 1;
	bytes sessionId = 2;
}

message ChannelEntityInfo {
	bytes type = 1;
	bytes info = 2;
	bytes entityId = 3;
	bytes sessionId = 4;
}

message EntityMessage {
	bytes entityId = 1;	// target entity id
	bytes methodName = 2;
	int32 index = 3;
	bytes parameters = 4;
	bytes sessionId = 5;
	bytes context = 6;
}

message ChannelMessage {
	bytes chanMsg = 1;
	bytes sessionId = 2;
	bytes context = 3;
}

